--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 </ul>
 </nav>
 <h4 id="abstract" class="unnumbered">Abstract</h4>
-<p><em>A Beginner’s Guide to Finding User Needs</em> shows you how to use qualitative research to learn about the motivations, activities, and problems of (potential) users. The book was created for UX researchers, UX designers and product managers. #### License{-}</p>
+<p><em>A Beginner’s Guide to Finding User Needs</em> shows you how to use qualitative research to learn about the motivations, activities, and problems of (potential) users. The book was created for UX researchers, UX designers and product managers.</p>
+<h4 id="license" class="unnumbered">License</h4>
 <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" data-property="dct:title">A Beginner’s Guide to Finding User Needs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/jdittrich" property="cc:attributionName" rel="cc:attributionURL">Jan Dittrich</a> licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. Some images may have other licenses (like CC-BY-SA).</p>
 <h4 id="contributors" class="unnumbered">Contributors</h4>
 <ul>
@@ -172,13 +173,17 @@
 <li>Claudia Landivar</li>
 </ul>
 <h4 id="resources" class="unnumbered">Resources</h4>
-<p>Supplemental information, versions for ebook-readers and co-documentation templates can be found at <a href="https://urbook.fordes.de" class="uri">https://urbook.fordes.de</a></p>
+<p>Additional information and co-documentation templates can be found at <a href="https://urbook.fordes.de">urbook.fordes.de</a></p>
 <h4 id="suggestions-and-feedback" class="unnumbered">Suggestions and Feedback</h4>
-<p>This book is free/libre, if you help to improve it, it helps all other fellow readers.</p>
-<p>To point out mistakes you can:</p>
+<p>This book is free/libé, if you help to improve it, it helps all other fellow readers. To point out mistakes you can:</p>
 <ul>
 <li><a href="https://github.com/jdittrich/userNeedResearchBook/issues">file an issue</a> (If you are on Github)</li>
 <li>write me a mail: dittrich.c.jan AT gmail DOT com</li>
+</ul>
+<h4 id="payed-and-free-versions-of-this-book" class="unnumbered">Payed and free versions of this book</h4>
+<ul>
+<li>If you/your team/your company wants to buy this book and pay for my coffees, <a href="https://leanpub.com/beginnersguidetofindinguserneeds/">visit its page on leanpub</a>.</li>
+<li>You can read this book for free at <a href="https://jdittrich.github.io/userNeedResearchBook/">github pages</a> or download versions for ebook readers on <a href="https://urbook.fordes.de/">urbook.fordes.de</a></li>
 </ul>
 <h1 id="research-focused-on-understanding">Research focused on understanding</h1>
 <p><em>This chapter covers:</em></p>
@@ -641,7 +646,9 @@ TODOs/NOTEs
 <!-- this section is fairly long and should probably be broken up into several parts -->
 <p>Only listening to people might not be the best way to understand what they are doing. Just like a picture is worth a thousand words, it is often helpful to ask participants to show what they talk about and to demonstrate how they work. Often it is also easier for participant and researcher alike.</p>
 <p>As you observe, you can notice things your participants would never consider to mentioning, because they’re second nature to them: The tools they use, how they apply these tools, and which problems they meet. But you can observe it. You also can learn about the context of their work, like means of communicating with colleagues or cues in the environment that point out problems—for example quick fixes on devices using tape and cardboard, or added instructions on machines.</p>
-<p><img src="images/03_dataGathering_coffeeMachineUserChanges.jpg" alt="A coffee machine with added instructions on a orange note, telling that the buttons are for “Full Cup”, “Half Cup”, “Espresso”" />{#coffeeMachineUserChanges alt=“Button panel of an automatic coffee machine which is labeled with icons; above the buttons is an orange note, telling that the buttons are for “Full Cup”, “Half Cup”, “Espresso”}</p>
+<figure>
+<img src="images/03_dataGathering_coffeeMachineUserChanges.jpg" alt="A coffee machine with added instructions on a orange note, telling that the buttons are for “Full Cup”, “Half Cup”, “Espresso”." id="coffeeMachineUserChanges" alt="Button panel of an automatic coffee machine which is labeled with icons; above the buttons is an orange note, telling that the buttons are for “Full Cup”, “Half Cup”, “Espresso”" /><figcaption>A coffee machine with added instructions on a orange note, telling that the buttons are for “Full Cup”, “Half Cup”, “Espresso”.</figcaption>
+</figure>
 <p>It is not necessary to have observation as a separate step in the research process. It is best to interweave observation with asking questions and listening. For example, you can ask for a demonstration instead of a description.</p>
 <blockquote>
 <p>If the participant tells you:<br />
@@ -1559,7 +1566,7 @@ Quick findings are very useful if your audience:
 <!-- roundtrip -->
 <h3 id="posters">Posters</h3>
 <p>The great thing about posters is that they can become part of the environment the design team works in. The poster can be a reminder of the most important results, and team members can refer and point to it in conversations.</p>
-<p>Posters are the most compact way to summarize your research: Only the most important results get on a poster. Text should be short and structured with headlines. You can use graphics to their full potential on a poster. Complex processes or diagrams often suffer from the limited space they get in other media. Here they shine.</p>
+<p>Posters are the most compact way to summarize your research: Only the most important results get on a poster. Text should be short and structured with headings. You can use graphics to their full potential on a poster. Complex processes or diagrams often suffer from the limited space they get in other media. Here they shine.</p>
 <figure>
 <img src="images/05_communication_PosterExample.png" alt="Poster summarizing the research into improving cooking skills" id="posterExample1" alt="A poster showing a research summary and several research findings on how people learn to improve their cooking skills using recipes and videos" /><figcaption>Poster summarizing the research into improving cooking skills</figcaption>
 </figure>
@@ -1596,7 +1603,7 @@ Quick findings are very useful if your audience:
 <img src="images/05_communication_SlideQuote.png" alt="Giving a better impression of the research participants: Slide with quote." id="slidesQuote" alt="A slide showing a participant quote (I thought it can’t be this hard, right?! But then I tried and it went quite badly) and an explanation of the context" /><figcaption>Giving a better impression of the research participants: Slide with quote.</figcaption>
 </figure>
 <figure>
-<img src="images/05_communication_SlidePhoto.png" alt="Giving a better impression of what you observed: Slide with photo." id="slidesPhoto" alt="A slide showing a photo of a bowl with cake dough. The slide’s headline reads:“The food is at the center, not the instructions”" /><figcaption>Giving a better impression of what you observed: Slide with photo.</figcaption>
+<img src="images/05_communication_SlidePhoto.png" alt="Giving a better impression of what you observed: Slide with photo." id="slidesPhoto" alt="A slide showing a photo of a bowl with cake dough. The slide’s heading reads:“The food is at the center, not the instructions”" /><figcaption>Giving a better impression of what you observed: Slide with photo.</figcaption>
 </figure>
 <p>You can use the slides to show diagrams and other forms of visualization. In the following slide, I visualize that recipes see straightforward, almost like algorithms, but that the actions that people do based on the recipe are far more complex:</p>
 <figure>
